--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'jacoco'
 
     group 'com.github.danzx.zekke'
     version '1.0-SNAPSHOT'
@@ -22,6 +23,13 @@ subprojects {
         testCompile "junit:junit:${junitVersion}"
         testCompile "org.assertj:assertj-core:${assertjVersion}"
         testCompile "pl.pragmatists:JUnitParams:${junitParamsVersion}"
+    }
+
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+            html.enabled true
+        }
     }
 }
 
