--- a/rest-client/build.gradle
+++ b/rest-client/build.gradle
@@ -7,7 +7,7 @@ ext {
 }
 
 dependencies {
-    compile project(':core')
+    compile project(':core'), project(':api')
     compile "com.google.code.gson:gson:${gsonVersion}"
     compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
     compile "org.slf4j:slf4j-api:${slf4jVersion}"
